--- a/app/views/newspapers/issue.html.haml
+++ b/app/views/newspapers/issue.html.haml
@@ -61,7 +61,7 @@
 							- items.each do |item|
 								%li= link_to item[:label], item[:href]
 
-	.col-md-3.page-info
+	.col-md-3.sidebar
 
 		%h4 About this newspaper
 
