--- a/app/views/shared/_copyright_template.html.haml
+++ b/app/views/shared/_copyright_template.html.haml
@@ -6,4 +6,4 @@
 %p If reproducing this item, it is helpful to include the following credit:
 
 .well
-	[Copyright notice, credit and URL here]
+	Copyright notice, credit and URL here
