--- a/app/views/about/home.html.haml
+++ b/app/views/about/home.html.haml
@@ -20,7 +20,7 @@
 			%p <strong>Papers Past</strong> contains more than three million pages of digitised New Zealand newspapers and periodicals. The collection covers the years 1839 to 1945 and includes 83 publications from all regions of New Zealand.
 			%p The newspapers on Papers Past are only a small proportion of New Zealand newspapers. If you cannot find what you are looking for online, it may be available as a paper copy or microfilm. Check the National Newspaper Collection page on the National Library website for more information.
 
-			.alert.alert-success
+			.well
 				%h3 About our new look
 				%p We're making the Papers Past experience you already know and love better, with heaps of new materials, easier-to-use controls, and support for your smartphone or tablet. 
 				%h4
