--- a/app/views/shared/_breadcrumbs.html.haml
+++ b/app/views/shared/_breadcrumbs.html.haml
@@ -1,4 +1,4 @@
-- unless @item[:collection].nil?
+- if not @item[:collection].nil?
 	- url = "/#{@type}/title/#{@item[:collection].parameterize}"
 	= link_to @item[:collection], url
 	- if not @item[:date_year].nil?
@@ -9,13 +9,11 @@
 		»
 		- url += "/#{@item[:parliamentary_session].parameterize}"
 		= link_to @item[:parliamentary_session], url
-	- if not @item[:date_month].nil?
+
+	- if not @item[:date_day].nil? and not @item[:date_month].nil?
 		»
-		- url += "/#{@item[:date_month]}"
-		= link_to @item[:date].strftime("%B"), url
-	- if not @item[:date_day].nil?
-		- url += "/#{@item[:date_day]}"
-		= link_to @item[:date_day].to_i, url
+		- url += "/#{@item[:date_month]}/#{@item[:date_day]}"
+		= link_to "#{@item[:date].strftime("%B")} #{@item[:date_day].to_i}", url
 	- if not @item[:page_number].nil?
 		»
 		- url += "/#{@item[:page_number]}"
