--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -4,13 +4,15 @@
 $bodyFont: "Raleway", "Avenir";
 $headingFont: "Rokkitt", "Clarendon";
 
-$ppGreen: #91aa62;
-/* $ppAccent: #9843B2; */
-/* $ppAccent: #739fde; */
-$ppAccent: #fc3;
+$ppGreen: desaturate(#91aa62, 10%);
+/* Green 		#add86b; */
+/* Yellow 		#f4be42; */
+/* Lavender 	#cca5db; */
+/* Blue		 	#42a6f3; */
+$ppAccent: #add86b;
 $ppAccentText: darken($ppAccent, 40%);
 $ppGray: #e3e3d4;
-$ppSuperHighlight: #fc3;
+$ppSuperHighlight: #a00;
 
 
 @mixin border-radius($a: false, $b: false, $c: false, $d: false, $top-left: 0, $top-right: 0, $bottom-right: 0, $bottom-left: 0, $top: false, $bottom: false, $right: false, $left: false, $radius: false) {
@@ -118,17 +120,19 @@ label {
 	}
 	.navbar-header {
 		.navbar-brand {
-			background: darken($ppGreen, 20%) !important;
+			background: darken($ppGreen, 15%) !important;
 		}
 	}
 	.navbar-format {
-		background: url(/assets/bg-nav-arr-r.png) 0 50% no-repeat, url(/assets/arrow-format.png) 100% 50% no-repeat $ppAccent !important;
+		/* background: url(/assets/bg-nav-arr-r.png) 0 50% no-repeat, url(/assets/arrow-format.png) 100% 50% no-repeat $ppAccent !important; */ 
+		background: $ppAccent !important;
 		background-size: auto 50%, auto 100% !important;
-		padding-left: 1.5em;
-		padding-right: 2em;
 		text-transform: uppercase;
 		font-weight: 700;
 		color: $ppAccentText !important;
+		border: 3px solid white;
+		border-top: 0;
+		border-bottom: 0;
 		a {
 			color: $ppAccentText !important;
 		}
@@ -136,6 +140,9 @@ label {
 	.format-picker {
 		background: $ppGreen !important;
 		background-size: auto 100% !important;
+	}
+	.quick-help-toggle {
+		font-weight: 700;
 	}
 }
 
@@ -166,7 +173,7 @@ ol.breadcrumb {
 		font-size: 4em;	
 		padding: 0.3em 0.5em;
 		border-bottom: 0px;
-		@include border-radius(0 0 10px 10px);
+		border-radius: 0 0 10px 10px;
 		margin: -60px 0 0.5em;
 		small {
 			color: lighten($ppGreen, 40%);
@@ -176,7 +183,7 @@ ol.breadcrumb {
 		}
 	}
 	.media-object {
-		@include border-radius(6px);
+		border-radius: 6px;
 		border: 1px solid darken($ppGray, 10%);
 	}
 	.media-body p {
@@ -210,7 +217,7 @@ ol.breadcrumb {
 		border-radius: 10px;
 		padding: 10px;
 		line-height: 1.2;
-		background: lighten($ppAccent, 35%);
+		background: lighten($ppAccent, 30%);
 		color: darken($ppAccent, 40%);
 
 		&:hover {
@@ -256,7 +263,7 @@ ol.breadcrumb {
 		background: lighten($ppGreen, 40%);
 		color: darken($ppGreen, 20%);
 		padding: 0.3em 0.5em;
-		@include border-radius(6px);
+		border-radius: 6px;
 	}
 	img {
 		width:100%;
@@ -296,12 +303,11 @@ ol.breadcrumb {
 	color: $ppAccentText;
 	font-weight: 700;
 	border-radius: 10px;
-	position: absolute;
-	top: 0.9em;
-	right: 1em;
 	padding: 0.5em 1em;
 	font-size: small;
 	text-transform: uppercase;
+	float: right;
+	margin: 0 0 1em 0;
 }
 .close-widget:hover {
 	background: $ppAccent;
@@ -385,6 +391,7 @@ table {
 
 .search-controls {
 	overflow: hidden;
+	margin: 1em 0;
 	.search-control-panel {
 		display: inline-block;
 		padding: 0 0 0 1em;
@@ -465,6 +472,13 @@ tr:hover {
 	padding: 0 0 1.5em 0;
 	display: inline-block;
 	width: 100%;
+	background: white;
+	margin: 0 0 1em 0;
+	border-radius: 10px;
+	border: 1px solid $ppGray;
+	h5 {
+		border-radius: 10px 10px 0 0;
+	}
 	.title {
 		display: block;
 	}
@@ -571,6 +585,59 @@ tr:hover {
 	}
 }
 
+.multi-choice-palette {
+	display: none;
+	position: absolute;
+	top: 1.5em;
+	left: 50%;
+	width: 20em;
+	margin: 0 0 0 -10em;
+	padding: 15px 0 0 0;
+	z-index: 9999;
+	border-radius: 1em;
+	background: url(/assets/arrow-up.png) 50% 0 no-repeat transparent;
+	.multi-choice-palette-contents {
+		border: 3px solid $ppGray;
+		border-radius: 1em;
+		background: white;
+		box-shadow: 10px 10px 10px rgba(0,0,0,0.4);
+		height: 11em;
+		overflow: scroll;
+		padding: 1em 1em 1em 4px;
+		a {
+			box-sizing: border-box;
+			width: 20%;
+			display: block;
+			float: left;
+			padding: 4px;
+			text-align: center;
+			color: inherit;
+		}
+		.choose-item-decade {
+			clear: left;
+			font-weight: 700;
+		}
+		.choose-item {
+			border-radius: 10px;
+			&:hover {
+				background: lighten($ppAccent, 30%);
+			}
+		}
+		.choose-selected {
+			background: $ppAccent;
+			color: $ppAccentText;
+		}
+		.choose-item-inactive {
+			color: $ppGray;
+		}
+	}
+	.months {
+		a {
+			width: 33%;
+		}
+	}
+}
+
 /* This is the latest one! FIXME: clean out old date pickers */
 .date-range-picker {
 	h2, h4 {
@@ -612,16 +679,32 @@ tr:hover {
 		.timeline-content {
 			position: relative;
 			height: 120px;
-			margin: 1em 0;
+			margin: 1em 0 0;
 			border: 1px solid $ppGray;
-			background: white;
+			border-bottom: 0;
+			background: lighten($ppGreen, 20%);
+			.muted {
+				.bar-magnitude {
+					background: rgba(0,0,0,0.2) !important;
+				}
+			}
+			.timeline-hilite {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 120px;
+				background: white;
+				box-sizing: border-box;
+				border-left: 2px solid $ppSuperHighlight;
+				border-right: 2px solid $ppSuperHighlight;
+			}
 			.timeline-bar {
 				position: absolute;
 				bottom: 0;
 				left: 0;
 				width: 6px;
 				height: 120px;
-				background: url(/assets/timeline-bar.png) repeat-x 0 0 transparent;
 				.bar-label {
 					position: absolute;
 					top: 1.2em;
@@ -630,11 +713,18 @@ tr:hover {
 					font-weight: 700;
 					display: none;
 					width: 8em;
-					background: rgba(255,255,255,0.6);
+					background: rgba(255,255,255,0.8);
 					z-index: 9999;
 					span {
 						display: block;
 					}
+				}
+				.bar-magnitude {
+					position: absolute;
+					background: $ppAccent;
+					width: 100%;
+					bottom: 0;
+					left: 0;
 				}
 				&:hover {
 					background-color: rgba(0,0,0,0.1);
@@ -644,6 +734,9 @@ tr:hover {
 							font-weight: 300;
 							font-size: 0.92em
 						}
+					}
+					.bar-magnitude {
+						background: #333 !important;
 					}
 				}
 			}
@@ -655,8 +748,8 @@ tr:hover {
 				padding: 4px;
 				font-size: 0.8em;
 				box-sizing: border-box;
-				color: $ppAccentText;
-				border-left: 1px solid $ppGray;
+				color: darken($ppGreen, 10%);
+				border-left: 1px solid lighten($ppGreen, 10%);
 			}
 		}
 	}
@@ -709,41 +802,20 @@ tr:hover {
 		h4 {
 			margin-top: 1em;
 		}
+		.inactive {
+			display: none !important;
+		}
 	}
 	.facet-tools {
 		label {
 			display: block;
 		}
 	}
-	/*
-	#search-options-toggle {
-		display: block;
-		padding: 0.5em 0.5em 0.25em;
-		width: 16em;
-		position: absolute;
-		bottom: 0;
-		right: 0;
-		background: lighten($ppGreen, 10%);
-		color: #fff;
-		border: 1px solid lighten($ppGreen, 10%);
-		text-align: center;
-		font-weight: bold;
-		text-transform: uppercase;
-		border-radius: 1em;
-	}
-	*/
 
-	.advanced-search-options {
-		h3.narrow {
-			margin: 0.5em 0 0;
-			font-size: 1.4em;
-		}
-		.inactive {
-			display: none;
-		}
-	}
 	.slider-range {
-		margin: 0.5em 1em;
+		margin: 0 25px 0 0;
+		border-radius: 0;
+		background: lighten($ppGreen, 20%) url(/assets/timeline-bar-muted.png) 0 0;
 	}
 	.ui-slider-range {
 		background: $ppAccent;
@@ -774,6 +846,7 @@ tr:hover {
 		input {
 			display: inline;
 		}
+		clear: right;
 	}
 	.search-option-panel {
 		border-radius: 5px;
@@ -963,3 +1036,64 @@ body.pres {
 	shape-rendering: crispEdges;
 	stroke: #000;
 }
+
+/* COLOR TEST */
+$colorTestCore: #a0b13d;
+$colorTestAccent1: #9843B2;
+$colorTestAccent2: #739fde;
+$colorTestAccent3: #f3be41;
+$colorTestAccent4: #256374;
+$colorTestAccent5: #88405e;
+$colorTestNeutral: #353535;
+$colorTestHighlight: #a00;
+
+.color-test {
+	width: 100px;
+	height: 100px;
+	float: left;
+	box-sizing: border-box;
+	border-right: 1px solid white;
+}
+.color-test-row {
+	width: 900px;
+	height: 100px;
+}
+
+$colorTest: $colorTestCore, $colorTestAccent1, $colorTestAccent2, $colorTestAccent3, $colorTestAccent4, $colorTestAccent5, $colorTestNeutral, $colorTestHighlight;
+$colorTestName: core, accent1, accent2, accent3, accent4, accent5, neutral, highlight;
+
+@for $i from 1 through 8 {
+	.color-#{nth($colorTestName, $i)} {
+		.color-100 {
+			background: lighten(nth($colorTest, $i), 40%);
+		}
+		.color-200 {
+			background: lighten(nth($colorTest, $i), 30%);
+		}
+		.color-300 {
+			background: lighten(nth($colorTest, $i), 20%);
+		}
+		.color-400 {
+			background: lighten(nth($colorTest, $i), 10%);
+		}
+		.color-500 {
+			background: nth($colorTest, $i);
+		}
+		.color-600 {
+			background: darken(nth($colorTest, $i), 10%);
+		}
+		.color-700 {
+			background: darken(nth($colorTest, $i), 20%);
+		}
+		.color-800 {
+			background: darken(nth($colorTest, $i), 30%);
+		}
+		.color-900 {
+			background: darken(nth($colorTest, $i), 40%);
+		}
+	}
+}
+
+
+
+
