--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,7 +5,7 @@
 				%span.icon-bar
 				%span.icon-bar
 				%span.icon-bar
-			= link_to "Papers Past", root_path, :class => @type.nil? ? 'navbar-brand' : 'navbar-brand active'
+			= link_to raw("Papers Past"), root_path, :class => @type.nil? ? 'navbar-brand' : 'navbar-brand active'
 		.navbar-collapse.collapse
 
 			- if not @type.nil?
@@ -19,15 +19,15 @@
 					%ul.dropdown-menu{ role: 'menu' }
 						- FORMAT_LABELS.each do |fmt, label| 
 							- if fmt != @type
-								%li= link_to label, params["query"].blank? ? "/#{fmt}" : "/#{fmt}?query=#{params["query"]}"
+								%li= link_to label, request.url.gsub(@type.to_s, fmt.to_s)
 
 			%ul.nav.navbar-nav.navbar-right
 				%li
-					=link_to "About Papers Past", '/about'
+					=link_to "Quick Help", '#', :class => 'quick-help-toggle'
 				%li
 					=link_to "Getting Started Guide", '/help'
 				%li
-					=link_to "Quick Help", '#', :class => 'quick-help-toggle'
+					=link_to "About Papers Past", '/about'
 				%li.dropdown
 					%a.dropdown-toggle{href: '#', 'data-toggle' => 'dropdown'}
 						English
