--- a/app/views/format_viewer/show.html.haml
+++ b/app/views/format_viewer/show.html.haml
@@ -50,7 +50,7 @@
 
 				#researchtools.tab-pane.fade
 					.row
-						.col-md-6
+						.col-md-8.col-md-offset-2
 
 							%h3 Permanent link to this item:
 
@@ -78,7 +78,6 @@
 								%li= link_to 'XML', '#'
 								%li= link_to 'METS/ALTO', '#'
 
-						.col-md-6
 
 							%h3 Cite this item
 
