Little facet cleanup, turned Chardin back on

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  *= require_self
  *= require dataTables/jquery.dataTables.bootstrap3
  *= require jquery.ui.all
+ *= require chardinjs
  *= require_tree .
  */
 .content {
