--- a/app/views/format_viewer/index.html.haml
+++ b/app/views/format_viewer/index.html.haml
@@ -15,6 +15,8 @@
 
 				%h4= link_to "About the #{@type} »", "/#{@type}/title"
 
+				%h4= link_to "Latest additions »", "/about"
+
 				%h4= link_to "About Papers Past »", "/about"
 
 		.col-md-9
